trabalho 2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> expression other_expression
Rule 2     other_expression -> expression other_expression
Rule 3     other_expression -> empty
Rule 4     expression -> value_expr
Rule 5     expression -> logo_expr
Rule 6     expression -> if_stmt
Rule 7     expression -> loop_stmt
Rule 8     expression -> assign_expr
Rule 9     expression -> params
Rule 10    empty -> <empty>
Rule 11    logo_expr -> PENUP
Rule 12    logo_expr -> PU
Rule 13    logo_expr -> PENDOWN
Rule 14    logo_expr -> PD
Rule 15    logo_expr -> WIPECLEAN
Rule 16    logo_expr -> WC
Rule 17    logo_expr -> CLEARSCREEN
Rule 18    logo_expr -> CS
Rule 19    logo_expr -> HOME
Rule 20    logo_expr -> XCOR
Rule 21    logo_expr -> YCOR
Rule 22    logo_expr -> HEADING
Rule 23    logo_expr -> RANDOM
Rule 24    logo_expr -> TYPEIN
Rule 25    logo_expr -> FORWARD value_expr
Rule 26    logo_expr -> FO value_expr
Rule 27    logo_expr -> BK value_expr
Rule 28    logo_expr -> BACKWARD value_expr
Rule 29    logo_expr -> RIGHT value_expr
Rule 30    logo_expr -> RT value_expr
Rule 31    logo_expr -> LEFT value_expr
Rule 32    logo_expr -> LT value_expr
Rule 33    logo_expr -> PRINT value_expr
Rule 34    logo_expr -> SETXY value_expr value_expr
Rule 35    value_expr -> NUMBER
Rule 36    loop_stmt -> WHILE bool_expr THEN expression END
Rule 37    bool_expr_operator -> AND
Rule 38    bool_expr_operator -> OR
Rule 39    if_stmt -> IF bool_expr THEN expression END
Rule 40    if_stmt -> IF bool_expr THEN expression ELSE expression END
Rule 41    bool_expr -> value_expr EQUALS value_expr
Rule 42    bool_expr -> value_expr GREATER value_expr
Rule 43    bool_expr -> value_expr LOWER value_expr
Rule 44    bool_expr -> value_expr GREATEQ value_expr
Rule 45    bool_expr -> value_expr LOWEQ value_expr
Rule 46    bool_expr -> bool_expr bool_expr_operator bool_expr
Rule 47    assign_expr -> TO IDENTIFIER params expression END
Rule 48    params -> ARGUMENT
Rule 49    params -> params ARGUMENT

Terminals, with rules where they appear

AND                  : 37
ARGUMENT             : 48 49
BACKWARD             : 28
BK                   : 27
CLEARSCREEN          : 17
CS                   : 18
ELSE                 : 40
END                  : 36 39 40 47
EQUALS               : 41
FO                   : 26
FORWARD              : 25
GREATEQ              : 44
GREATER              : 42
HEADING              : 22
HOME                 : 19
IDENTIFIER           : 47
IF                   : 39 40
LEFT                 : 31
LOWEQ                : 45
LOWER                : 43
LT                   : 32
NUMBER               : 35
OR                   : 38
PD                   : 14
PENDOWN              : 13
PENUP                : 11
PRINT                : 33
PU                   : 12
RANDOM               : 23
RIGHT                : 29
RT                   : 30
SETXY                : 34
THEN                 : 36 39 40
TO                   : 47
TYPEIN               : 24
WC                   : 16
WHILE                : 36
WIPECLEAN            : 15
XCOR                 : 20
YCOR                 : 21
error                : 

Nonterminals, with rules where they appear

assign_expr          : 8
bool_expr            : 36 39 40 46 46
bool_expr_operator   : 46
empty                : 3
expression           : 1 2 36 39 40 40 47
if_stmt              : 6
logo_expr            : 5
loop_stmt            : 7
other_expression     : 1 2
params               : 9 47 49
program              : 0
value_expr           : 4 25 26 27 28 29 30 31 32 33 34 34 41 41 42 42 43 43 44 44 45 45

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . expression other_expression
    (4) expression -> . value_expr
    (5) expression -> . logo_expr
    (6) expression -> . if_stmt
    (7) expression -> . loop_stmt
    (8) expression -> . assign_expr
    (9) expression -> . params
    (35) value_expr -> . NUMBER
    (11) logo_expr -> . PENUP
    (12) logo_expr -> . PU
    (13) logo_expr -> . PENDOWN
    (14) logo_expr -> . PD
    (15) logo_expr -> . WIPECLEAN
    (16) logo_expr -> . WC
    (17) logo_expr -> . CLEARSCREEN
    (18) logo_expr -> . CS
    (19) logo_expr -> . HOME
    (20) logo_expr -> . XCOR
    (21) logo_expr -> . YCOR
    (22) logo_expr -> . HEADING
    (23) logo_expr -> . RANDOM
    (24) logo_expr -> . TYPEIN
    (25) logo_expr -> . FORWARD value_expr
    (26) logo_expr -> . FO value_expr
    (27) logo_expr -> . BK value_expr
    (28) logo_expr -> . BACKWARD value_expr
    (29) logo_expr -> . RIGHT value_expr
    (30) logo_expr -> . RT value_expr
    (31) logo_expr -> . LEFT value_expr
    (32) logo_expr -> . LT value_expr
    (33) logo_expr -> . PRINT value_expr
    (34) logo_expr -> . SETXY value_expr value_expr
    (39) if_stmt -> . IF bool_expr THEN expression END
    (40) if_stmt -> . IF bool_expr THEN expression ELSE expression END
    (36) loop_stmt -> . WHILE bool_expr THEN expression END
    (47) assign_expr -> . TO IDENTIFIER params expression END
    (48) params -> . ARGUMENT
    (49) params -> . params ARGUMENT

    NUMBER          shift and go to state 9
    PENUP           shift and go to state 10
    PU              shift and go to state 11
    PENDOWN         shift and go to state 12
    PD              shift and go to state 13
    WIPECLEAN       shift and go to state 14
    WC              shift and go to state 15
    CLEARSCREEN     shift and go to state 16
    CS              shift and go to state 17
    HOME            shift and go to state 18
    XCOR            shift and go to state 19
    YCOR            shift and go to state 20
    HEADING         shift and go to state 21
    RANDOM          shift and go to state 22
    TYPEIN          shift and go to state 23
    FORWARD         shift and go to state 24
    FO              shift and go to state 25
    BK              shift and go to state 26
    BACKWARD        shift and go to state 27
    RIGHT           shift and go to state 28
    RT              shift and go to state 29
    LEFT            shift and go to state 30
    LT              shift and go to state 31
    PRINT           shift and go to state 32
    SETXY           shift and go to state 33
    IF              shift and go to state 34
    WHILE           shift and go to state 35
    TO              shift and go to state 36
    ARGUMENT        shift and go to state 37

    program                        shift and go to state 1
    expression                     shift and go to state 2
    value_expr                     shift and go to state 3
    logo_expr                      shift and go to state 4
    if_stmt                        shift and go to state 5
    loop_stmt                      shift and go to state 6
    assign_expr                    shift and go to state 7
    params                         shift and go to state 8

state 1

    (0) S' -> program .



state 2

    (1) program -> expression . other_expression
    (2) other_expression -> . expression other_expression
    (3) other_expression -> . empty
    (4) expression -> . value_expr
    (5) expression -> . logo_expr
    (6) expression -> . if_stmt
    (7) expression -> . loop_stmt
    (8) expression -> . assign_expr
    (9) expression -> . params
    (10) empty -> .
    (35) value_expr -> . NUMBER
    (11) logo_expr -> . PENUP
    (12) logo_expr -> . PU
    (13) logo_expr -> . PENDOWN
    (14) logo_expr -> . PD
    (15) logo_expr -> . WIPECLEAN
    (16) logo_expr -> . WC
    (17) logo_expr -> . CLEARSCREEN
    (18) logo_expr -> . CS
    (19) logo_expr -> . HOME
    (20) logo_expr -> . XCOR
    (21) logo_expr -> . YCOR
    (22) logo_expr -> . HEADING
    (23) logo_expr -> . RANDOM
    (24) logo_expr -> . TYPEIN
    (25) logo_expr -> . FORWARD value_expr
    (26) logo_expr -> . FO value_expr
    (27) logo_expr -> . BK value_expr
    (28) logo_expr -> . BACKWARD value_expr
    (29) logo_expr -> . RIGHT value_expr
    (30) logo_expr -> . RT value_expr
    (31) logo_expr -> . LEFT value_expr
    (32) logo_expr -> . LT value_expr
    (33) logo_expr -> . PRINT value_expr
    (34) logo_expr -> . SETXY value_expr value_expr
    (39) if_stmt -> . IF bool_expr THEN expression END
    (40) if_stmt -> . IF bool_expr THEN expression ELSE expression END
    (36) loop_stmt -> . WHILE bool_expr THEN expression END
    (47) assign_expr -> . TO IDENTIFIER params expression END
    (48) params -> . ARGUMENT
    (49) params -> . params ARGUMENT

    $end            reduce using rule 10 (empty -> .)
    NUMBER          shift and go to state 9
    PENUP           shift and go to state 10
    PU              shift and go to state 11
    PENDOWN         shift and go to state 12
    PD              shift and go to state 13
    WIPECLEAN       shift and go to state 14
    WC              shift and go to state 15
    CLEARSCREEN     shift and go to state 16
    CS              shift and go to state 17
    HOME            shift and go to state 18
    XCOR            shift and go to state 19
    YCOR            shift and go to state 20
    HEADING         shift and go to state 21
    RANDOM          shift and go to state 22
    TYPEIN          shift and go to state 23
    FORWARD         shift and go to state 24
    FO              shift and go to state 25
    BK              shift and go to state 26
    BACKWARD        shift and go to state 27
    RIGHT           shift and go to state 28
    RT              shift and go to state 29
    LEFT            shift and go to state 30
    LT              shift and go to state 31
    PRINT           shift and go to state 32
    SETXY           shift and go to state 33
    IF              shift and go to state 34
    WHILE           shift and go to state 35
    TO              shift and go to state 36
    ARGUMENT        shift and go to state 37

    expression                     shift and go to state 38
    other_expression               shift and go to state 39
    empty                          shift and go to state 40
    value_expr                     shift and go to state 3
    logo_expr                      shift and go to state 4
    if_stmt                        shift and go to state 5
    loop_stmt                      shift and go to state 6
    assign_expr                    shift and go to state 7
    params                         shift and go to state 8

state 3

    (4) expression -> value_expr .

    NUMBER          reduce using rule 4 (expression -> value_expr .)
    PENUP           reduce using rule 4 (expression -> value_expr .)
    PU              reduce using rule 4 (expression -> value_expr .)
    PENDOWN         reduce using rule 4 (expression -> value_expr .)
    PD              reduce using rule 4 (expression -> value_expr .)
    WIPECLEAN       reduce using rule 4 (expression -> value_expr .)
    WC              reduce using rule 4 (expression -> value_expr .)
    CLEARSCREEN     reduce using rule 4 (expression -> value_expr .)
    CS              reduce using rule 4 (expression -> value_expr .)
    HOME            reduce using rule 4 (expression -> value_expr .)
    XCOR            reduce using rule 4 (expression -> value_expr .)
    YCOR            reduce using rule 4 (expression -> value_expr .)
    HEADING         reduce using rule 4 (expression -> value_expr .)
    RANDOM          reduce using rule 4 (expression -> value_expr .)
    TYPEIN          reduce using rule 4 (expression -> value_expr .)
    FORWARD         reduce using rule 4 (expression -> value_expr .)
    FO              reduce using rule 4 (expression -> value_expr .)
    BK              reduce using rule 4 (expression -> value_expr .)
    BACKWARD        reduce using rule 4 (expression -> value_expr .)
    RIGHT           reduce using rule 4 (expression -> value_expr .)
    RT              reduce using rule 4 (expression -> value_expr .)
    LEFT            reduce using rule 4 (expression -> value_expr .)
    LT              reduce using rule 4 (expression -> value_expr .)
    PRINT           reduce using rule 4 (expression -> value_expr .)
    SETXY           reduce using rule 4 (expression -> value_expr .)
    IF              reduce using rule 4 (expression -> value_expr .)
    WHILE           reduce using rule 4 (expression -> value_expr .)
    TO              reduce using rule 4 (expression -> value_expr .)
    ARGUMENT        reduce using rule 4 (expression -> value_expr .)
    $end            reduce using rule 4 (expression -> value_expr .)
    END             reduce using rule 4 (expression -> value_expr .)
    ELSE            reduce using rule 4 (expression -> value_expr .)


state 4

    (5) expression -> logo_expr .

    NUMBER          reduce using rule 5 (expression -> logo_expr .)
    PENUP           reduce using rule 5 (expression -> logo_expr .)
    PU              reduce using rule 5 (expression -> logo_expr .)
    PENDOWN         reduce using rule 5 (expression -> logo_expr .)
    PD              reduce using rule 5 (expression -> logo_expr .)
    WIPECLEAN       reduce using rule 5 (expression -> logo_expr .)
    WC              reduce using rule 5 (expression -> logo_expr .)
    CLEARSCREEN     reduce using rule 5 (expression -> logo_expr .)
    CS              reduce using rule 5 (expression -> logo_expr .)
    HOME            reduce using rule 5 (expression -> logo_expr .)
    XCOR            reduce using rule 5 (expression -> logo_expr .)
    YCOR            reduce using rule 5 (expression -> logo_expr .)
    HEADING         reduce using rule 5 (expression -> logo_expr .)
    RANDOM          reduce using rule 5 (expression -> logo_expr .)
    TYPEIN          reduce using rule 5 (expression -> logo_expr .)
    FORWARD         reduce using rule 5 (expression -> logo_expr .)
    FO              reduce using rule 5 (expression -> logo_expr .)
    BK              reduce using rule 5 (expression -> logo_expr .)
    BACKWARD        reduce using rule 5 (expression -> logo_expr .)
    RIGHT           reduce using rule 5 (expression -> logo_expr .)
    RT              reduce using rule 5 (expression -> logo_expr .)
    LEFT            reduce using rule 5 (expression -> logo_expr .)
    LT              reduce using rule 5 (expression -> logo_expr .)
    PRINT           reduce using rule 5 (expression -> logo_expr .)
    SETXY           reduce using rule 5 (expression -> logo_expr .)
    IF              reduce using rule 5 (expression -> logo_expr .)
    WHILE           reduce using rule 5 (expression -> logo_expr .)
    TO              reduce using rule 5 (expression -> logo_expr .)
    ARGUMENT        reduce using rule 5 (expression -> logo_expr .)
    $end            reduce using rule 5 (expression -> logo_expr .)
    END             reduce using rule 5 (expression -> logo_expr .)
    ELSE            reduce using rule 5 (expression -> logo_expr .)


state 5

    (6) expression -> if_stmt .

    NUMBER          reduce using rule 6 (expression -> if_stmt .)
    PENUP           reduce using rule 6 (expression -> if_stmt .)
    PU              reduce using rule 6 (expression -> if_stmt .)
    PENDOWN         reduce using rule 6 (expression -> if_stmt .)
    PD              reduce using rule 6 (expression -> if_stmt .)
    WIPECLEAN       reduce using rule 6 (expression -> if_stmt .)
    WC              reduce using rule 6 (expression -> if_stmt .)
    CLEARSCREEN     reduce using rule 6 (expression -> if_stmt .)
    CS              reduce using rule 6 (expression -> if_stmt .)
    HOME            reduce using rule 6 (expression -> if_stmt .)
    XCOR            reduce using rule 6 (expression -> if_stmt .)
    YCOR            reduce using rule 6 (expression -> if_stmt .)
    HEADING         reduce using rule 6 (expression -> if_stmt .)
    RANDOM          reduce using rule 6 (expression -> if_stmt .)
    TYPEIN          reduce using rule 6 (expression -> if_stmt .)
    FORWARD         reduce using rule 6 (expression -> if_stmt .)
    FO              reduce using rule 6 (expression -> if_stmt .)
    BK              reduce using rule 6 (expression -> if_stmt .)
    BACKWARD        reduce using rule 6 (expression -> if_stmt .)
    RIGHT           reduce using rule 6 (expression -> if_stmt .)
    RT              reduce using rule 6 (expression -> if_stmt .)
    LEFT            reduce using rule 6 (expression -> if_stmt .)
    LT              reduce using rule 6 (expression -> if_stmt .)
    PRINT           reduce using rule 6 (expression -> if_stmt .)
    SETXY           reduce using rule 6 (expression -> if_stmt .)
    IF              reduce using rule 6 (expression -> if_stmt .)
    WHILE           reduce using rule 6 (expression -> if_stmt .)
    TO              reduce using rule 6 (expression -> if_stmt .)
    ARGUMENT        reduce using rule 6 (expression -> if_stmt .)
    $end            reduce using rule 6 (expression -> if_stmt .)
    END             reduce using rule 6 (expression -> if_stmt .)
    ELSE            reduce using rule 6 (expression -> if_stmt .)


state 6

    (7) expression -> loop_stmt .

    NUMBER          reduce using rule 7 (expression -> loop_stmt .)
    PENUP           reduce using rule 7 (expression -> loop_stmt .)
    PU              reduce using rule 7 (expression -> loop_stmt .)
    PENDOWN         reduce using rule 7 (expression -> loop_stmt .)
    PD              reduce using rule 7 (expression -> loop_stmt .)
    WIPECLEAN       reduce using rule 7 (expression -> loop_stmt .)
    WC              reduce using rule 7 (expression -> loop_stmt .)
    CLEARSCREEN     reduce using rule 7 (expression -> loop_stmt .)
    CS              reduce using rule 7 (expression -> loop_stmt .)
    HOME            reduce using rule 7 (expression -> loop_stmt .)
    XCOR            reduce using rule 7 (expression -> loop_stmt .)
    YCOR            reduce using rule 7 (expression -> loop_stmt .)
    HEADING         reduce using rule 7 (expression -> loop_stmt .)
    RANDOM          reduce using rule 7 (expression -> loop_stmt .)
    TYPEIN          reduce using rule 7 (expression -> loop_stmt .)
    FORWARD         reduce using rule 7 (expression -> loop_stmt .)
    FO              reduce using rule 7 (expression -> loop_stmt .)
    BK              reduce using rule 7 (expression -> loop_stmt .)
    BACKWARD        reduce using rule 7 (expression -> loop_stmt .)
    RIGHT           reduce using rule 7 (expression -> loop_stmt .)
    RT              reduce using rule 7 (expression -> loop_stmt .)
    LEFT            reduce using rule 7 (expression -> loop_stmt .)
    LT              reduce using rule 7 (expression -> loop_stmt .)
    PRINT           reduce using rule 7 (expression -> loop_stmt .)
    SETXY           reduce using rule 7 (expression -> loop_stmt .)
    IF              reduce using rule 7 (expression -> loop_stmt .)
    WHILE           reduce using rule 7 (expression -> loop_stmt .)
    TO              reduce using rule 7 (expression -> loop_stmt .)
    ARGUMENT        reduce using rule 7 (expression -> loop_stmt .)
    $end            reduce using rule 7 (expression -> loop_stmt .)
    END             reduce using rule 7 (expression -> loop_stmt .)
    ELSE            reduce using rule 7 (expression -> loop_stmt .)


state 7

    (8) expression -> assign_expr .

    NUMBER          reduce using rule 8 (expression -> assign_expr .)
    PENUP           reduce using rule 8 (expression -> assign_expr .)
    PU              reduce using rule 8 (expression -> assign_expr .)
    PENDOWN         reduce using rule 8 (expression -> assign_expr .)
    PD              reduce using rule 8 (expression -> assign_expr .)
    WIPECLEAN       reduce using rule 8 (expression -> assign_expr .)
    WC              reduce using rule 8 (expression -> assign_expr .)
    CLEARSCREEN     reduce using rule 8 (expression -> assign_expr .)
    CS              reduce using rule 8 (expression -> assign_expr .)
    HOME            reduce using rule 8 (expression -> assign_expr .)
    XCOR            reduce using rule 8 (expression -> assign_expr .)
    YCOR            reduce using rule 8 (expression -> assign_expr .)
    HEADING         reduce using rule 8 (expression -> assign_expr .)
    RANDOM          reduce using rule 8 (expression -> assign_expr .)
    TYPEIN          reduce using rule 8 (expression -> assign_expr .)
    FORWARD         reduce using rule 8 (expression -> assign_expr .)
    FO              reduce using rule 8 (expression -> assign_expr .)
    BK              reduce using rule 8 (expression -> assign_expr .)
    BACKWARD        reduce using rule 8 (expression -> assign_expr .)
    RIGHT           reduce using rule 8 (expression -> assign_expr .)
    RT              reduce using rule 8 (expression -> assign_expr .)
    LEFT            reduce using rule 8 (expression -> assign_expr .)
    LT              reduce using rule 8 (expression -> assign_expr .)
    PRINT           reduce using rule 8 (expression -> assign_expr .)
    SETXY           reduce using rule 8 (expression -> assign_expr .)
    IF              reduce using rule 8 (expression -> assign_expr .)
    WHILE           reduce using rule 8 (expression -> assign_expr .)
    TO              reduce using rule 8 (expression -> assign_expr .)
    ARGUMENT        reduce using rule 8 (expression -> assign_expr .)
    $end            reduce using rule 8 (expression -> assign_expr .)
    END             reduce using rule 8 (expression -> assign_expr .)
    ELSE            reduce using rule 8 (expression -> assign_expr .)


state 8

    (9) expression -> params .
    (49) params -> params . ARGUMENT

  ! shift/reduce conflict for ARGUMENT resolved as shift
    NUMBER          reduce using rule 9 (expression -> params .)
    PENUP           reduce using rule 9 (expression -> params .)
    PU              reduce using rule 9 (expression -> params .)
    PENDOWN         reduce using rule 9 (expression -> params .)
    PD              reduce using rule 9 (expression -> params .)
    WIPECLEAN       reduce using rule 9 (expression -> params .)
    WC              reduce using rule 9 (expression -> params .)
    CLEARSCREEN     reduce using rule 9 (expression -> params .)
    CS              reduce using rule 9 (expression -> params .)
    HOME            reduce using rule 9 (expression -> params .)
    XCOR            reduce using rule 9 (expression -> params .)
    YCOR            reduce using rule 9 (expression -> params .)
    HEADING         reduce using rule 9 (expression -> params .)
    RANDOM          reduce using rule 9 (expression -> params .)
    TYPEIN          reduce using rule 9 (expression -> params .)
    FORWARD         reduce using rule 9 (expression -> params .)
    FO              reduce using rule 9 (expression -> params .)
    BK              reduce using rule 9 (expression -> params .)
    BACKWARD        reduce using rule 9 (expression -> params .)
    RIGHT           reduce using rule 9 (expression -> params .)
    RT              reduce using rule 9 (expression -> params .)
    LEFT            reduce using rule 9 (expression -> params .)
    LT              reduce using rule 9 (expression -> params .)
    PRINT           reduce using rule 9 (expression -> params .)
    SETXY           reduce using rule 9 (expression -> params .)
    IF              reduce using rule 9 (expression -> params .)
    WHILE           reduce using rule 9 (expression -> params .)
    TO              reduce using rule 9 (expression -> params .)
    $end            reduce using rule 9 (expression -> params .)
    END             reduce using rule 9 (expression -> params .)
    ELSE            reduce using rule 9 (expression -> params .)
    ARGUMENT        shift and go to state 41

  ! ARGUMENT        [ reduce using rule 9 (expression -> params .) ]


state 9

    (35) value_expr -> NUMBER .

    NUMBER          reduce using rule 35 (value_expr -> NUMBER .)
    PENUP           reduce using rule 35 (value_expr -> NUMBER .)
    PU              reduce using rule 35 (value_expr -> NUMBER .)
    PENDOWN         reduce using rule 35 (value_expr -> NUMBER .)
    PD              reduce using rule 35 (value_expr -> NUMBER .)
    WIPECLEAN       reduce using rule 35 (value_expr -> NUMBER .)
    WC              reduce using rule 35 (value_expr -> NUMBER .)
    CLEARSCREEN     reduce using rule 35 (value_expr -> NUMBER .)
    CS              reduce using rule 35 (value_expr -> NUMBER .)
    HOME            reduce using rule 35 (value_expr -> NUMBER .)
    XCOR            reduce using rule 35 (value_expr -> NUMBER .)
    YCOR            reduce using rule 35 (value_expr -> NUMBER .)
    HEADING         reduce using rule 35 (value_expr -> NUMBER .)
    RANDOM          reduce using rule 35 (value_expr -> NUMBER .)
    TYPEIN          reduce using rule 35 (value_expr -> NUMBER .)
    FORWARD         reduce using rule 35 (value_expr -> NUMBER .)
    FO              reduce using rule 35 (value_expr -> NUMBER .)
    BK              reduce using rule 35 (value_expr -> NUMBER .)
    BACKWARD        reduce using rule 35 (value_expr -> NUMBER .)
    RIGHT           reduce using rule 35 (value_expr -> NUMBER .)
    RT              reduce using rule 35 (value_expr -> NUMBER .)
    LEFT            reduce using rule 35 (value_expr -> NUMBER .)
    LT              reduce using rule 35 (value_expr -> NUMBER .)
    PRINT           reduce using rule 35 (value_expr -> NUMBER .)
    SETXY           reduce using rule 35 (value_expr -> NUMBER .)
    IF              reduce using rule 35 (value_expr -> NUMBER .)
    WHILE           reduce using rule 35 (value_expr -> NUMBER .)
    TO              reduce using rule 35 (value_expr -> NUMBER .)
    ARGUMENT        reduce using rule 35 (value_expr -> NUMBER .)
    $end            reduce using rule 35 (value_expr -> NUMBER .)
    END             reduce using rule 35 (value_expr -> NUMBER .)
    ELSE            reduce using rule 35 (value_expr -> NUMBER .)
    EQUALS          reduce using rule 35 (value_expr -> NUMBER .)
    GREATER         reduce using rule 35 (value_expr -> NUMBER .)
    LOWER           reduce using rule 35 (value_expr -> NUMBER .)
    GREATEQ         reduce using rule 35 (value_expr -> NUMBER .)
    LOWEQ           reduce using rule 35 (value_expr -> NUMBER .)
    THEN            reduce using rule 35 (value_expr -> NUMBER .)
    AND             reduce using rule 35 (value_expr -> NUMBER .)
    OR              reduce using rule 35 (value_expr -> NUMBER .)


state 10

    (11) logo_expr -> PENUP .
